package net.proselyte.basepatterns.creational.factory;

public class CppDeveloper {
}
